--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,10 +42,10 @@ jobs:
       # Generate SSH key pair directly in the workflow
       - name: Generate SSH Key
         run: |
-          ssh-keygen -t rsa -b 4096 -C "toureibrahimd2@gmail.com" 
+          mkdir -p ~/.ssh
+          ssh-keygen -t rsa -b 4096 -C "toureibrahimd2@gmail.com" -f ~/.ssh/id_rsa -N ""
           echo "SSH public key generated:"
           cat ~/.ssh/id_rsa.pub
-
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         run: terraform init
