--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,17 +29,11 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Run my local action
-        uses: ibrahim-a-developper/github-ssh-key-generator@v1
+        uses: ibrahim-a-developper/github-ssh-key-generator@master
         with:
           email: toureibrahimd2@gmail.com
 
-      # # - name: Generate SSH Key
-      #   run: |
-      #     mkdir -p ~/.ssh
-      #     ssh-keygen -t rsa -b 4096 -C "toureibrahimd2@gmail.com" -f ~/.ssh/id_rsa -N ""
-      #     echo "SSH public key generated:"
-      #     cat ~/.ssh/id_rsa.pub
-
+      
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
