--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,6 +37,23 @@ jobs:
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
+      - name: Create Terraform Workspaces
+        run: |
+          terraform -chdir=terraform workspace new dev || echo "Workspace dev already exists"
+          terraform -chdir=terraform workspace new stage || echo "Workspace stage already exists"
+          terraform -chdir=terraform workspace new prod || echo "Workspace prod already exists"
+          terraform -chdir=terraform workspace select dev
+
+      - name: Select Terraform Workspace
+        run: |
+          if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
+            terraform -chdir=terraform workspace select prod
+          elif [[ ${{ github.ref }} == 'refs/heads/stage' ]]; then
+            terraform -chdir=terraform workspace select stage
+          else
+            terraform -chdir=terraform workspace select dev
+          fi
+
       - name: Terraform Validate
         run: terraform -chdir=terraform validate
 
@@ -44,52 +61,14 @@ jobs:
         run: terraform -chdir=terraform fmt -check
 
       - name: Terraform Plan
-        run: terraform -chdir=terraform plan -input=false -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" -var "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" -var "aws_region=${{ secrets.AWS_REGION }}"
+        run: terraform -chdir=terraform plan -input=false \
+            -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \ 
+            -var "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            -var "aws_region=${{ secrets.AWS_REGION }}"
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        run: terraform -chdir=terraform destroy -auto-approve -input=false -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" -var "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" -var "aws_region=${{ secrets.AWS_REGION }}"
-#################
-# This workflow installs the latest version of Terraform CLI and configures the Terraform CLI configuration file
-# with an API token for Terraform Cloud (app.terraform.io). On pull request events, this workflow will run
-# `terraform init`, `terraform fmt`, and `terraform plan` (speculative plan via Terraform Cloud). On push events
-# to the "master" branch, `terraform apply` will be executed.
-#
-# Documentation for `hashicorp/setup-terraform` is located here: https://github.com/hashicorp/setup-terraform
-#
-# To use this workflow, you will need to complete the following setup steps.
-#
-# 1. Create a `main.tf` file in the root of this repository with the `remote` backend and one or more resources defined.
-#   Example `main.tf`:
-#     # The configuration for the `remote` backend.
-#     terraform {
-#       backend "remote" {
-#         # The name of your Terraform Cloud organization.
-#         organization = "example-organization"
-#
-#         # The name of the Terraform Cloud workspace to store Terraform state files in.
-#         workspaces {
-#           name = "example-workspace"
-#         }
-#       }
-#     }
-#
-#     # An example resource that does nothing.
-#     resource "null_resource" "example" {
-#       triggers = {
-#         value = "A example resource that does nothing!"
-#       }
-#     }
-#
-#
-# 2. Generate a Terraform Cloud user API token and store it as a GitHub secret (e.g. TF_API_TOKEN) on this repository.
-#   Documentation:
-#     - https://www.terraform.io/docs/cloud/users-teams-organizations/api-tokens.html
-#     - https://help.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
-#
-# 3. Reference the GitHub secret in step using the `hashicorp/setup-terraform` GitHub Action.
-#   Example:
-#     - name: Setup Terraform
-#       uses: hashicorp/setup-terraform@v1
-#       with:
-#         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        run: terraform -chdir=terraform destroy -auto-approve -input=false \
+            -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            -var "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            -var "aws_region=${{ secrets.AWS_REGION }}"
