--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,7 +2,7 @@ name: "Terraform"
 
 on:
   push:
-    branches: ["master"]
+    branches: ["master", "development", "stage"]
   pull_request:
   # pull_request:
   #   # The branches below must be a subset of the branches above
@@ -68,7 +68,7 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        run: terraform -chdir=terraform destroy -auto-approve -input=false \
+        run: terraform -chdir=terraform apply -auto-approve -input=false \
             -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
             -var "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
             -var "aws_region=${{ secrets.AWS_REGION }}"
