--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -61,16 +61,16 @@ jobs:
         run: terraform -chdir=terraform fmt -check
 
       - name: Terraform Plan
-        run: |
-            terraform -chdir=terraform plan -input=false \
-            -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \ 
-            -var "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-            -var "aws_region=${{ secrets.AWS_REGION }}"
+        env:
+          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+        run: terraform -chdir=terraform plan -input=false
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        run: |
-            terraform -chdir=terraform apply -auto-approve -input=false \
-            -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            -var "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-            -var "aws_region=${{ secrets.AWS_REGION }}"
+        env:
+          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+        run: terraform -chdir=terraform destroy -auto-approve -input=false
