--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,7 +2,7 @@ name: "Terraform"
 
 on:
   push:
-    branches: ["master", "development", "stage"]
+    branches: ["master", "dev", "stage"]
   pull_request:
   # pull_request:
   #   # The branches below must be a subset of the branches above
@@ -69,7 +69,7 @@ jobs:
 
       - name: Terraform Apply
         # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/development' || github.ref == 'refs/heads/stage'
+        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage'
 
 
         env:
