--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Terraform Apply
         # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage'
+        # if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage'
 
 
         env:
