--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -76,4 +76,4 @@ jobs:
           TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform apply -auto-approve -input=false
+        run: terraform -chdir=terraform destroy -auto-approve -input=false
