--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,7 @@ name: "Terraform"
 on:
   push:
     branches: ["master", "dev", "stage"]
-  pull_request:
+  # pull_request:
   # pull_request:
   #   # The branches below must be a subset of the branches above
   #   branches: ["master"]
@@ -76,4 +76,4 @@ jobs:
           TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform apply -auto-approve 
+        run: terraform -chdir=terraform destroy -auto-approve 
