--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -33,25 +33,26 @@ jobs:
         with:
           email: toureibrahimd2@gmail.com
 
+      
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
-      # - name: Create Terraform Workspaces
-      #   run: |
-      #     terraform -chdir=terraform workspace new dev || echo "Workspace dev already exists"
-      #     terraform -chdir=terraform workspace new stage || echo "Workspace stage already exists"
-      #     terraform -chdir=terraform workspace new prod || echo "Workspace prod already exists"
-      #     terraform -chdir=terraform workspace select dev
+      - name: Create Terraform Workspaces
+        run: |
+          terraform -chdir=terraform workspace new dev || echo "Workspace dev already exists"
+          terraform -chdir=terraform workspace new stage || echo "Workspace stage already exists"
+          terraform -chdir=terraform workspace new prod || echo "Workspace prod already exists"
+          terraform -chdir=terraform workspace select dev
 
-      # - name: Select Terraform Workspace
-      #   run: |
-      #     if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
-      #       terraform -chdir=terraform workspace select prod
-      #     elif [[ ${{ github.ref }} == 'refs/heads/stage' ]]; then
-      #       terraform -chdir=terraform workspace select stage
-      #     else
-      #       terraform -chdir=terraform workspace select dev
-      #     fi
+      - name: Select Terraform Workspace
+        run: |
+          if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
+            terraform -chdir=terraform workspace select prod
+          elif [[ ${{ github.ref }} == 'refs/heads/stage' ]]; then
+            terraform -chdir=terraform workspace select stage
+          else
+            terraform -chdir=terraform workspace select dev
+          fi
 
       - name: Terraform Validate
         run: terraform -chdir=terraform validate
@@ -74,4 +75,4 @@ jobs:
           TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform destroy -auto-approve
+        run: terraform -chdir=terraform destroy -auto-approve 
