--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -54,18 +54,18 @@ jobs:
             terraform -chdir=terraform workspace select dev
           fi
 
-      - name: Terraform Validate
-        run: terraform -chdir=terraform validate
+      # - name: Terraform Validate
+      #   run: terraform -chdir=terraform validate
 
-      - name: Terraform Format
-        run: terraform -chdir=terraform fmt -check
+      # - name: Terraform Format
+      #   run: terraform -chdir=terraform fmt -check
 
-      - name: Terraform Plan
-        env:
-          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform plan -input=false
+      # - name: Terraform Plan
+      #   env:
+      #     TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+      #   run: terraform -chdir=terraform plan -input=false
 
       - name: Terraform Apply
         # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
