--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -75,4 +75,4 @@ jobs:
           TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform apply -auto-approve 
+        run: terraform -chdir=terraform destroy -auto-approve 
