--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -33,7 +33,6 @@ jobs:
         with:
           email: toureibrahimd2@gmail.com
 
-      
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
@@ -60,12 +59,12 @@ jobs:
       # - name: Terraform Format
       #   run: terraform -chdir=terraform fmt -check
 
-      # - name: Terraform Plan
-      #   env:
-      #     TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-      #   run: terraform -chdir=terraform plan -input=false
+      - name: Terraform Plan
+        env:
+          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+        run: terraform -chdir=terraform plan -input=false
 
       - name: Terraform Apply
         # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
@@ -75,4 +74,4 @@ jobs:
           TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform destroy -auto-approve 
+        run: terraform -chdir=terraform destroy -auto-approve
