--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -73,12 +73,12 @@ jobs:
           TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
         run: terraform -chdir=terraform apply -refresh-only -auto-approve
 
-      - name: Terraform Apply
-        # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        # if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage'
-        # if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage')
-        env:
-          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform apply -auto-approve
+      # - name: Terraform Apply
+      #   # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+      #   # if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage'
+      #   # if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage')
+      #   env:
+      #     TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+      #   run: terraform -chdir=terraform apply -auto-approve
