--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -74,12 +74,35 @@ jobs:
         run: terraform -chdir=terraform refresh
 
 
-      - name: Terraform Apply
-        # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        # if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage'
-        # if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage')
+      # - name: Terraform Apply
+      #   # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+      #   # if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage'
+      #   # if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage')
+      #   env:
+      #     TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+      #   run: terraform -chdir=terraform destroy -auto-approve
+
+      - name: Terraform Apply Multi-Workspace
         env:
           TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform destroy -auto-approve
+        run: |
+          cd terraform
+      
+          WORKSPACES=("dev" "stage" "prod")
+          
+          for ws in "${WORKSPACES[@]}"; do
+            echo "=== Traitement du workspace: $ws ==="
+            
+            terraform workspace new $ws
+            terraform workspace select $ws 
+            
+            terraform init
+            terraform plan -out=tfplan_$ws
+            terraform apply -auto-approve tfplan_$ws
+            
+            echo "=== Workspace $ws terminé ==="
+          done
