--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -66,13 +66,12 @@ jobs:
           TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
         run: terraform -chdir=terraform plan -input=false
 
-      - name: Terraform Refresh State
-        env:
-          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform refresh
-
+      # - name: Terraform Refresh State
+      #   env:
+      #     TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+      #   run: terraform -chdir=terraform refresh
 
       # - name: Terraform Apply
       #   # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
@@ -91,9 +90,9 @@ jobs:
           TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
         run: |
           cd terraform
-      
+
           WORKSPACES=("dev" "stage" "prod")
-          
+
           for ws in "${WORKSPACES[@]}"; do
             echo "=== Traitement du workspace: $ws ==="
             
@@ -102,7 +101,7 @@ jobs:
             
             terraform init
             terraform plan -out=tfplan_$ws
-            terraform apply -auto-approve tfplan_$ws
+            terraform destroy -auto-approve tfplan_$ws
             
             echo "=== Workspace $ws terminé ==="
           done
