--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -44,8 +44,8 @@ jobs:
             terraform workspace select $ws || terraform workspace new $ws
             
             terraform init
-            # terraform plan -out=tfplan_$ws
-            terraform destroy -auto-approve 
+            terraform plan -input=false
+            terraform apply -out=tfplan_$ws
             
             echo "=== Workspace $ws completed ==="
           done
