--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -31,24 +31,39 @@ jobs:
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
-      - name: Terraform Apply and Plan Multi-Workspace
+      - name: Terraform Plan and Apply for each workspace
         run: |
           cd terraform
-
           WORKSPACES=("dev" "stage" "prod")
-
           for ws in "${WORKSPACES[@]}"; do
-            echo "=== "Processing the workspace: $ws" ==="
-            
-            
-            terraform workspace select $ws || terraform workspace new $ws
-            
+            echo "=== Processing the workspace: $ws ==="
+
+            export TF_WORKSPACE=$ws
             
             terraform plan -input=false
-            terraform apply --auto-approve -out=tfplan_$ws
+            terraform apply --auto-approve
             
             echo "=== Workspace $ws completed ==="
           done
 
-#terraform apply -auto-approve tfplan_$ws
-# terraform destroy -auto-approve
+#       - name: Terraform Apply and Plan Multi-Workspace
+#         run: |
+#           cd terraform
+
+#           WORKSPACES=("dev" "stage" "prod")
+
+#           for ws in "${WORKSPACES[@]}"; do
+#             echo "=== "Processing the workspace: $ws" ==="
+            
+            
+#             terraform workspace select $ws || terraform workspace new $ws
+            
+            
+#             terraform plan -input=false
+#             terraform apply --auto-approve -out=tfplan_$ws
+            
+#             echo "=== Workspace $ws completed ==="
+#           done
+
+# #terraform apply -auto-approve tfplan_$ws
+# # terraform destroy -auto-approve
