--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -31,37 +31,25 @@ jobs:
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
-      - name: Terraform Plan and Apply per workspace
+      - name: Terraform Plan and Apply per Workspace
         run: |
           cd terraform
+          
+          # Define your environments
           WORKSPACES=("dev" "stage" "prod")
+          
           for ws in "${WORKSPACES[@]}"; do
-            echo "=== Processing the workspace: $ws ==="
-            export TF_WORKSPACE=$ws
-            terraform init -input=false
-            terraform plan -input=false
-            terraform apply --auto-approve
-            echo "=== Workspace $ws completed ==="
+            echo "=== Processing environment: $ws ==="
+            
+            # Set Terraform Cloud workspace
+            export TF_WORKSPACE="${ws}"
+            
+            # Run Terraform commands for this workspace
+            terraform init -reconfigure
+            terraform plan -input=false -out=tfplan
+            
+            # Comment out for safety, uncomment when ready
+            # terraform apply -auto-approve tfplan
+            
+            echo "=== Environment $ws completed ==="
           done
-
-#       - name: Terraform Apply and Plan Multi-Workspace
-#         run: |
-#           cd terraform
-
-#           WORKSPACES=("dev" "stage" "prod")
-
-#           for ws in "${WORKSPACES[@]}"; do
-#             echo "=== "Processing the workspace: $ws" ==="
-            
-            
-#             terraform workspace select $ws || terraform workspace new $ws
-            
-            
-#             terraform plan -input=false
-#             terraform apply --auto-approve -out=tfplan_$ws
-            
-#             echo "=== Workspace $ws completed ==="
-#           done
-
-# #terraform apply -auto-approve tfplan_$ws
-# # terraform destroy -auto-approve
