--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
-      - name: Terraform plan
-        run: terraform -chdir=terraform plan -input=false
+      - name: Terraform apply
+        run: terraform -chdir=terraform apply -input=false
 
       # - name: Terraform Plan and Apply for each workspace
       #   run: |
