--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
-      - name: Terraform plan 1
+      - name: Terraform plan 
         run: terraform -chdir=terraform plan -input=false
 
       - name: Terraform apply
