--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -35,7 +35,7 @@ jobs:
         run: terraform -chdir=terraform plan -input=false
 
       - name: Terraform apply
-        run: terraform -chdir=terraform apply 
+        run: terraform -chdir=terraform apply -input=false -auto-approve
 
       # - name: Terraform Plan and Apply for each workspace
       #   run: |
