--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -47,7 +47,7 @@ jobs:
             
 
 
-            terraform apply  -auto-approve -var-file=$ws
+            terraform apply -var-file=$ws -auto-approve -input=false
 
             echo "=== Workspace $ws completed ==="
           done
