--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Terraform plan
         run: terraform -chdir=terraform plan -input=false
 
-      # - name: Terraform apply
+      # - name: Terraform applyf
       #   run: terraform -chdir=terraform apply -auto-approve -input=false
       - name: Terraform Plan and Apply for each workspace
         run: terraform -chdir=terraform apply  -auto-approve -input=false
